# OktamaDnsFilter

./: .gitignore  README.md  package-lock.json  package.json
.github/: FUNDING.yml
bugreport1/: dumpstate_log.txt  main_entry.txt
bugreport1/FS/data/tombstones/: tombstone_00  tombstone_00.pb  tombstone_01  tombstone_01.pb  tombstone_02  tombstone_02.pb  tombstone_03  tombstone_03.pb  tombstone_04  tombstone_04.pb  tombstone_05  tombstone_05.pb
bugreport1/FS/linkerconfig/: apex.libraries.config.txt  ld.config.txt
bugreport1/FS/linkerconfig/com.android.adbd/: ld.config.txt
bugreport1/FS/linkerconfig/com.android.art/: ld.config.txt
bugreport1/FS/linkerconfig/com.android.configinfrastructure/: ld.config.txt
bugreport1/FS/linkerconfig/com.android.conscrypt/: ld.config.txt
bugreport1/FS/linkerconfig/com.android.hardware.authsecret/: ld.config.txt
bugreport1/FS/linkerconfig/com.android.hardware.biometrics.fingerprint.virtual/: ld.config.txt
bugreport1/FS/linkerconfig/com.android.hardware.cas/: ld.config.txt
bugreport1/FS/linkerconfig/com.android.hardware.contexthub/: ld.config.txt
bugreport1/FS/linkerconfig/com.android.hardware.dumpstate/: ld.config.txt
bugreport1/FS/linkerconfig/com.android.hardware.gatekeeper/: ld.config.txt
bugreport1/FS/linkerconfig/com.android.hardware.power/: ld.config.txt
bugreport1/FS/linkerconfig/com.android.hardware.rebootescrow/: ld.config.txt
bugreport1/FS/linkerconfig/com.android.hardware.thermal/: ld.config.txt
bugreport1/FS/linkerconfig/com.android.hardware.threadnetwork/: ld.config.txt
bugreport1/FS/linkerconfig/com.android.hardware.uwb/: ld.config.txt
bugreport1/FS/linkerconfig/com.android.hardware.vibrator/: ld.config.txt
bugreport1/FS/linkerconfig/com.android.media/: ld.config.txt
bugreport1/FS/linkerconfig/com.android.media.swcodec/: ld.config.txt
bugreport1/FS/linkerconfig/com.android.mediaprovider/: ld.config.txt
bugreport1/FS/linkerconfig/com.android.os.statsd/: ld.config.txt
bugreport1/FS/linkerconfig/com.android.profiling/: ld.config.txt
bugreport1/FS/linkerconfig/com.android.runtime/: ld.config.txt
bugreport1/FS/linkerconfig/com.android.sdkext/: ld.config.txt
bugreport1/FS/linkerconfig/com.android.tethering/: ld.config.txt
bugreport1/FS/linkerconfig/com.android.uprobestats/: ld.config.txt
bugreport1/FS/linkerconfig/com.android.webapp/: ld.config.txt
bugreport1/FS/linkerconfig/com.android.wifi/: ld.config.txt
bugreport1/FS/linkerconfig/com.google.android.widevine/: ld.config.txt
bugreport1/FS/proc/: cpuinfo  meminfo
bugreport1/FS/proc/1/: mountinfo
bugreport1/FS/proc/1033/: mountinfo
bugreport1/FS/proc/1051/: mountinfo
bugreport1/FS/proc/1084/: mountinfo
bugreport1/FS/proc/1102/: mountinfo
bugreport1/FS/proc/1106/: mountinfo
bugreport1/FS/proc/1126/: mountinfo
bugreport1/FS/proc/1128/: mountinfo
bugreport1/FS/proc/1259/: mountinfo
bugreport1/FS/proc/1341/: mountinfo
bugreport1/FS/proc/1466/: mountinfo
bugreport1/FS/proc/1484/: mountinfo
bugreport1/FS/proc/1529/: mountinfo
bugreport1/FS/proc/1550/: mountinfo
bugreport1/FS/proc/1578/: mountinfo
bugreport1/FS/proc/1622/: mountinfo
bugreport1/FS/proc/1649/: mountinfo
bugreport1/FS/proc/1665/: mountinfo
bugreport1/FS/proc/1679/: mountinfo
bugreport1/FS/proc/1990/: mountinfo
bugreport1/FS/proc/2318/: mountinfo
bugreport1/FS/proc/2530/: mountinfo
bugreport1/FS/proc/2539/: mountinfo
bugreport1/FS/proc/2820/: mountinfo
bugreport1/FS/proc/3092/: mountinfo
bugreport1/lshal-debug/: android.hardware.media.c2@1.2__IComponentStore_software.txt
bugreport1/proto/: SurfaceFlinger_CRITICAL.proto  activity.proto  incident_report.proto  input_method.proto  input_method_CRITICAL.proto  netstats.proto  statusbar.proto  window_CRITICAL.proto
src/: App.css  App.tsx  main.tsx
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/dns-core/: Cargo.toml
src-tauri/dns-core/src/: android.rs  filter.rs  intercept.rs  lib.rs  storage.rs  tunnel.rs  upstream.rs
src-tauri/src/: lib.rs  main.rs
(+34 files in other folders)
